# fasse

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: audit.yml  cd.yml  ci.yml
examples/: flat.rs
scripts/: pre_commit.sh
src/: error.rs  lib.rs
src/index/: index.rs  index_base.rs  index_flat.rs  mod.rs
src/index/collections/: heap_key.rs  mod.rs
tests/: test_flat.rs  test_simple.rs
